@@ -1,11 +1,0 @@
-record(ai, "$(P)$(R)") {
-    field(DTYP, "asynInt32")
-    field(DESC, "$(DESC="")")
-    field(INP,  "@asyn($(PORT) $(OFFSET))MODBUS_DATA")
-    field(LINR, "ssaPwrFwd")
-    field(PREC, "$(PREC=1)")
-    field(EGU,  "$(EGU="")")
-    field(SCAN, "$(SCAN="I/O Intr")")
-    info(autosaveFields, "LOLO LOW HIGH HIHI HYST LLSV LSV HSV HHSV")
-}
-
