@@ -1,17 +1,0 @@
-breaktable(ssaPwrDrv) {
-    10 1287
-    5 1173
-    0 1063
-    -5 954
-    -10 847
-    -15 740
-    -20 632
-    -25 525
-    -30 419
-    -35 317
-    -40 225
-    -45 152
-    -50 75
-    -55 25
-    -60 10
-}
