@@ -1,40 +1,0 @@
-breaktable(ssaPwrFwd) {
-    70000 2370
-    68000 2334
-    66000 2298
-    64000 2262
-    62000 2225
-    60000 2188
-    58000 2150
-    56000 2112
-    54000 2073
-    52000 2033
-    50000 1992
-    48000 1956
-    46000 1914
-    44000 1872
-    42000 1829
-    40000 1785
-    38000 1740
-    36000 1693
-    34000 1645
-    32000 1597
-    30000 1548
-    28000 1500
-    26000 1446
-    24000 1391
-    22000 1335
-    20000 1275
-    18000 1212
-    16000 1146
-    14000 1074
-    12000 999
-    10000 919
-    7500 804
-    5000 662
-    2000 428
-    1000 307
-    500 219
-    200 141
-    0 0
-}
