@@ -1,43 +1,0 @@
-breaktable(ssaPwrRef) {
-    70000 2258
-    68000 2223
-    66000 2188
-    64000 2153
-    62000 2118
-    60000 2083
-    58000 2047
-    56000 2011
-    70000 2258
-    68000 2223
-    66000 2188
-    54000 1975
-    52000 1938
-    50000 1900
-    48000 1862
-    46000 1822
-    44000 1782
-    42000 1741
-    40000 1699
-    38000 1656
-    36000 1611
-    34000 1566
-    32000 1519
-    30000 1471
-    28000 1421
-    26000 1370
-    24000 1318
-    22000 1263
-    20000 1205
-    18000 1144
-    16000 1083
-    14000 1014
-    12000 941
-    10000 863
-    7500 750
-    5000 615
-    2000 386
-    1000 267
-    500 180
-    200 115
-    0 0
-}
