@@ -1,30 +1,0 @@
-#*************************************************************************
-# Copyright (c) 2013 UChicago Argonne LLC, as Operator of Argonne
-#     National Laboratory.
-# Copyright (c) 2002 The Regents of the University of California, as
-#     Operator of Los Alamos National Laboratory.
-# EPICS BASE is distributed subject to a Software License Agreement found
-# in file LICENSE that is included with this distribution. 
-#*************************************************************************
-
-
-menu(menuConvert) {
-	choice(menuConvertNO_CONVERSION,"NO CONVERSION")
-	choice(menuConvertSLOPE,"SLOPE")
-	choice(menuConvertLINEAR,"LINEAR")
-	choice(menuConverttypeKdegF,"typeKdegF")
-	choice(menuConverttypeKdegC,"typeKdegC")
-	choice(menuConverttypeJdegF,"typeJdegF")
-	choice(menuConverttypeJdegC,"typeJdegC")
-	choice(menuConverttypeEdegF,"typeEdegF(ixe only)")
-	choice(menuConverttypeEdegC,"typeEdegC(ixe only)")
-	choice(menuConverttypeTdegF,"typeTdegF")
-	choice(menuConverttypeTdegC,"typeTdegC")
-	choice(menuConverttypeRdegF,"typeRdegF")
-	choice(menuConverttypeRdegC,"typeRdegC")
-	choice(menuConverttypeSdegF,"typeSdegF")
-	choice(menuConverttypeSdegC,"typeSdegC")
-	choice(menuConvertssaPwrFwd,"ssaPwrFwd")
-	choice(menuConvertssaPwrRef,"ssaPwrRef")
-	choice(menuConvertssaPwrDrv,"ssaPwrDrv")
-}
